--- a/pages/Lik.html
+++ b/pages/Lik.html
@@ -11,7 +11,7 @@
     <div class="trailer-box">
         <video autoplay controls>
             <source
-                src="../Assets/Love Insurance Kompany (LIK - Tamil)  First Punch  Pradeep Ranganathan  Vignesh Shivan  Anirudh.mp4"
+                src="../assets/Love Insurance Kompany (LIK - Tamil)  First Punch  Pradeep Ranganathan  Vignesh Shivan  Anirudh.mp4"
                 type="video/mp4">
         </video>
 
