--- a/pages/Adithy_Varma.html
+++ b/pages/Adithy_Varma.html
@@ -37,7 +37,7 @@
     </div>
 
     <button class="book-btn">Book Ticket</button>
-    <a class="back-btn" href="../pages/index.html" >Back</a>
+    <a class="back-btn" href="../index.html" >Back</a>
 
     <link rel="stylesheet" href="../css/Movie.css">
 </body>
