--- a/pages/Nav_EVENTS.html
+++ b/pages/Nav_EVENTS.html
@@ -35,7 +35,7 @@
 
     <a href="#" class="register-btn">Register Now</a>
   </div>
-  <a class="back-btn" href="../pages/index.html">Back</a>
+  <a class="back-btn" href="../index.html">Back</a>
   <footer>
     &copy; 2025 Tech Innovators
   </footer>
