--- a/pages/Nav_Sports.html
+++ b/pages/Nav_Sports.html
@@ -14,7 +14,7 @@
   </header>
 
   <nav>
-    <a href="../pages/index.html">Home</a>
+    <a href="../index.html">Home</a>
   </nav>
 
   <div class="container">
