--- a/index.html
+++ b/index.html
@@ -39,32 +39,34 @@
         <img src="./assets/Marco.jpg">
       </a>
     </div>
-    <div class="sub-banner1">
-      <a href="./pages/Adithy_Varma.html">
-        <img src="./assets/Adithya_Varma.jpg">
-      </a>
-    </div>
-    <div class="sub-banner2">
-      <a href="./pages/KGF.html">
-        <img src="./assets/Kgf2.png">
-      </a>
-    </div>
-    <div class="sub-banner3">
-      <a href="./pages/Leo.html">
-        <img src="./assets/Leo.png">
-      </a>
+    <div class="sub-banner-container">
+      <div class="sub-banner1">
+        <a href="./pages/Adithy_Varma.html">
+          <img src="./assets/Adithya_Varma.jpg">
+        </a>
+      </div>
+      <div class="sub-banner2">
+        <a href="./pages/KGF.html">
+          <img src="./assets/Kgf2.png">
+        </a>
+      </div>
+      <div class="sub-banner3">
+        <a href="./pages/Leo.html">
+          <img src="./assets/Leo.png">
+        </a>
+      </div>
     </div>
   </div>
   </div>
 
-  <div class="featured-section">
-    <h1>UPCOMING MOVIE</h1>
-    <div class="featured-banner">
-      <a href="./pages/Lik.html">
-        <img src="./assets/Lik.jpg">
-      </a>
-    </div>
+<div class="featured-section">
+  <div class="featured-banner">
+    <a href="./pages/Lik.html">
+      <img src="./assets/Lik.jpg" alt="Love Insurance Kompany">
+      <h1 class="banner-title">UPCOMING MOVIE</h1>
+    </a>
   </div>
+</div>
 
   <footer>
     <p>© 2025 MyWebsite. All Rights Reserved.</p>
